update setup